--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,13 @@
 <resources>
-    <string name="app_name">Медицинская приложения</string>
-    <string name="button_not_register">У вас нет аккаунта? <font color='red'>Регистрация</font></string>
-    <string name="after_register">У вас уже есть аккаунт? <font color='red'>Войти сейчас</font></string>
-    <string name="password">Пароль</string>
-    <string name="email">Электронная почта</string>
+    <string name="app_name">Медициналық қолданба</string>
+    <string name="button_not_register">Аккаунт жоқ па? <font color='red'>Тіркеу</font></string>
+    <string name="after_register">Сізде бұрыннан аккаунт бар ма?<font color='red'>Қазір кіріңіз</font></string>
+    <string name="password">Құпия сөз</string>
+    <string name="email">Электрондық пошта</string>
+    <string name="select_doc">Дәрігерді таңданыз</string>
+    <string name="cabinet">Емдеу кабинетін</string>
+    <string name="order_time">Тапсырыс уақыты</string>
+    <string name="date_of_stay">Бару күні</string>
+    <string name="time">Уақыт</string>
+    <string name="description">Сізге не ауыр тиетінін сипаттаңыз</string>
 </resources>
